--- a/Project002.BasicCRUD/Project002.BasicCRUD.csproj
+++ b/Project002.BasicCRUD/Project002.BasicCRUD.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
-    <RootNamespace>Project._002</RootNamespace>
+    <RootNamespace>Project002.BasicCRUD</RootNamespace>
   </PropertyGroup>
 
 </Project>
